1) fix docker-compose 2) fix DI config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
-version: "3.3"
+version: "3"
 services:
   api-service:
     build: .
+    container_name: flask-memchached
     ports:
       - "80:5000"
     environment:
       CACHE_HOST: "$CACHE_HOST"
       CACHE_PORT: "$CACHE_PORT"
     depends_on:
-      - my_project_memcached
-  my_project_memcached:
+      - cache
+  cache:
     image: memcached:latest
+    container_name: cache-memchached
     entrypoint:
       - memcached
       - -m 64
